fix: mixed overflow style

--- a/src/styles/design/_fn.scss
+++ b/src/styles/design/_fn.scss
@@ -1,8 +1,3 @@
-@mixin clearfix {
-  overflow: hidden;
-  zoom: 1;
-}
-
 // sass-lint:disable no-vendor-prefixes
 @mixin retina {
   @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
